--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "dotenv": "^8.2.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "jsrsasign-util": "^1.0.5",
+    "openpgp": "^5.0.0-2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
