--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-elements": "git+https://github.com/react-native-elements/react-native-elements.git#dist",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-material-cards": "^1.0.15",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
