--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "expo": "~41.0.1",
+    "expo-local-authentication": "~11.0.2",
     "expo-status-bar": "~1.0.4",
     "openpgp": "^5.0.0-2",
     "react": "16.13.1",
@@ -26,8 +28,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "expo-local-authentication": "~11.0.2"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
