--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-material-cards": "^1.0.15",
     "react-native-reanimated": "~2.1.0",
     "react-native-rsa": "0.0.3",
+    "react-native-rsa-native": "^2.0.3",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
